--- a/app/src/main/res/layout/quote_recycler.xml
+++ b/app/src/main/res/layout/quote_recycler.xml
@@ -4,22 +4,45 @@
 
 
     <RelativeLayout
-        android:layout_marginBottom="10dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:gravity="start">
 
         <androidx.recyclerview.widget.RecyclerView
+            tools:visibility="gone"
             tools:listitem="@layout/quotescard"
             android:id="@+id/quotesrecyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <com.budiyev.android.circularprogressbar.CircularProgressBar
+        <com.budiyev.android.circularprogressbar.CircularProgressBar xmlns:app="http://schemas.android.com/apk/res-auto"
+            app:foregroundStrokeColor="@color/colorPrimaryDark"
+            app:indeterminate="true"
             android:id="@+id/loading"
             android:layout_centerInParent="true"
             android:layout_width="64dp"
             android:layout_height="64dp" />
+
+        <LinearLayout
+            android:id="@+id/emptyList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_astronaut_sitting" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Desculpe não encontrei nada" />
+        </LinearLayout>
 
 
     </RelativeLayout>
