--- a/app/src/main/res/drawable/defaultdot.xml
+++ b/app/src/main/res/drawable/defaultdot.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thickness="4dp"
             android:useLevel="false">
-            <solid android:color="@color/grey_100"/>
+            <solid android:color="?android:textColorHint" />
 
         </shape>
     </item>
