--- a/app/src/main/res/drawable/round.xml
+++ b/app/src/main/res/drawable/round.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <corners android:radius="15dp" />
+    <corners android:radius="@dimen/default_padding" />
 
 
     <!-- below code for different radius for each corner. -->
