--- a/app/src/main/res/drawable/round_low.xml
+++ b/app/src/main/res/drawable/round_low.xml
@@ -15,6 +15,6 @@
 
 
     <!-- Background color -->
-    <solid android:color="@color/grey_200" />
+    <solid android:color="@color/material_grey200" />
 
 </shape>
