--- a/app/src/main/res/layout/color_card.xml
+++ b/app/src/main/res/layout/color_card.xml
@@ -2,22 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
-    <data>
-
-        <variable
-            name="color"
-            type="Integer" />
-    </data>
-
     <androidx.cardview.widget.CardView
         android:id="@+id/colorcard"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="2dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="4dp"
         android:stateListAnimator="@animator/list_animator"
-        app:cardBackgroundColor="@{color}"
-        app:cardCornerRadius="5dp"
+        app:cardCornerRadius="@dimen/default_padding"
         app:cardElevation="0dp"
         tools:backgroundTint="@color/colorPrimaryDark"
 
