--- a/app/src/main/res/layout/delete_all_alert.xml
+++ b/app/src/main/res/layout/delete_all_alert.xml
@@ -52,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Confirmar exclusão"
-                android:textColor="@color/red_500" />
+                android:textColor="@color/material_red500" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/cancelDelete"
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/round"
                 android:text="Cancelar"
-                app:backgroundTint="@color/blue_500" />
+                app:backgroundTint="@color/material_blue500" />
         </LinearLayout>
 
     </LinearLayout>
