--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -45,6 +45,7 @@
             android:id="@+id/profileRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            tools:itemCount="2"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
             tools:listitem="@layout/quote_header_view" />
 
