--- a/app/src/main/res/layout/quote_header_view.xml
+++ b/app/src/main/res/layout/quote_header_view.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
-        android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -17,6 +16,7 @@
             tools:text="Publicações" />
 
         <include
+            android:layout_marginTop="10dp"
             android:id="@+id/quotesRecycler"
             layout="@layout/quote_recycler" />
 
