--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:fontFamily">@font/lato_regular</item>
-        <item name="colorPrimary">@color/purple_400</item>
-        <item name="colorPrimaryDark">@color/purple_800</item>
-        <item name="colorAccent">@color/purple_A100</item>
+        <item name="colorPrimary">@color/material_purple400</item>
+        <item name="colorPrimaryDark">@color/material_purple800</item>
+        <item name="colorAccent">@color/material_purpleA100</item>
         <item name="android:statusBarColor">?android:colorBackground</item>
         <item name="android:navigationBarColor">?android:colorBackground</item>
         <item name="alertDialogStyle">@style/AppTheme.AlertDialog</item>
@@ -13,6 +13,7 @@
         <item name="searchViewStyle">@style/Searchtheme</item>
         <item name="snackbarStyle">@style/AppSnackbar</item>
         <item name="android:windowActivityTransitions">true</item>
+        <item name="android:stateListAnimator">@animator/list_animator</item>
     </style>
 
     <style name="AppSnackbar" parent="Widget.MaterialComponents.Snackbar">
@@ -56,9 +57,9 @@
     <style name="Dialog_No_Border">
         <item name="android:windowAnimationStyle">@style/DialogAnimation</item>
         <item name="android:fontFamily">@font/lato_regular</item>
-        <item name="colorPrimary">@color/purple_400</item>
-        <item name="colorPrimaryDark">@color/purple_800</item>
-        <item name="colorAccent">@color/purple_A100</item>
+        <item name="colorPrimary">@color/material_purple400</item>
+        <item name="colorPrimaryDark">@color/material_purple800</item>
+        <item name="colorAccent">@color/material_purpleA100</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowBackground">@color/transparent</item>
     </style>
@@ -66,8 +67,8 @@
     <style name="Bottom_Dialog_No_Border">
         <item name="android:windowAnimationStyle">@style/BottomDialogAnimation</item>
         <item name="android:fontFamily">@font/lato_regular</item>
-        <item name="colorPrimary">@color/purple_400</item>
-        <item name="colorPrimaryDark">@color/purple_800</item>
+        <item name="colorPrimary">@color/material_purple400</item>
+        <item name="colorPrimaryDark">@color/material_purple800</item>
         <item name="android:textColor">?android:textColor</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowBackground">@color/transparent</item>
